add png for fluid layout ex

--- a/_posts/plotly_js/responsive-fluid-layout/2015-10-20-responsive-fluid-layout.html
+++ b/_posts/plotly_js/responsive-fluid-layout/2015-10-20-responsive-fluid-layout.html
@@ -1,6 +1,6 @@
 ---
-name: Responsive/Fluid Layout
-plot_url: https:codepen.io/cldougl/pen/ojpwyG?editors=101
+name: Responsive Fluid Layout
+plot_url: https:codepen.io/cldougl/pen/ojpwyG
 language: plotly_js
 suite: responsive-fluid-layout
 order: 1
