--- a/_posts/plotly_js/responsive-fluid-layout/2015-10-20-responsive-fluid-layout_plotly_js_index.html
+++ b/_posts/plotly_js/responsive-fluid-layout/2015-10-20-responsive-fluid-layout_plotly_js_index.html
@@ -1,15 +1,15 @@
 ---
-title: Javascript Graphing Library Responsive/Fluid Layout | Examples | Plotly
-name: Responsive/Fluid Layout
+title: Javascript Graphing Library Responsive Fluid Layout | Examples | Plotly
+name: Responsive Fluid Layout
 permalink: javascript/responsive-fluid-layout/
 description: How to create a plot with a responsive layout in javascript.
 layout: base
-thumbnail: /images/fluid-layout.gif
+thumbnail: /images/auto-resize.png
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
 display_as: chart_type
-order: 21
+order: 22
 redirect_from: javascript-graphing-library/responsive-fluid-layout/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","responsive-fluid-layout" | sort: "order" %}
