fix codepen url

--- a/_posts/plotly_js/responsive-fluid-layout/2015-10-20-responsive-fluid-layout.html
+++ b/_posts/plotly_js/responsive-fluid-layout/2015-10-20-responsive-fluid-layout.html
@@ -1,6 +1,6 @@
 ---
 name: Responsive Fluid Layout
-plot_url: https:codepen.io/cldougl/pen/ojpwyG
+plot_url: https://codepen.io/cldougl/pen/ojpwyG
 language: plotly_js
 suite: responsive-fluid-layout
 order: 1
@@ -46,3 +46,14 @@ window.onresize = function() {
 };
 
 })();
+
+<!DOCTYPE html>
+<head>
+    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/237913/jquery-2.1.4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.3.5/d3.js" charset="utf-8"></script>
+    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/237913/plotly.min.js" charset="utf-8"></script>
+</head>
+<body>
+    <script src="./main.js"></script>
+</body>
+</html>
