--- a/_posts/plotly_js/responsive-fluid-layout/2015-10-20-responsive-fluid-layout_plotly_js_index.html
+++ b/_posts/plotly_js/responsive-fluid-layout/2015-10-20-responsive-fluid-layout_plotly_js_index.html
@@ -1,10 +1,10 @@
 ---
-title: Javascript Graphing Library Responsive Fluid Layout | Examples | Plotly
-name: Responsive Fluid Layout
+title: Javascript Graphing Library Responsive / Fluid Layout | Examples | Plotly
+name: Responsive / Fluid Layout
 permalink: javascript/responsive-fluid-layout/
 description: How to create a plot with a responsive layout in javascript.
 layout: base
-thumbnail: /images/auto-resize.png
+thumbnail: /images/fluid-layout.gif
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
