--- a/_posts/python/area/2015-08-14-stacked-area.html
+++ b/_posts/python/area/2015-08-14-stacked-area.html
@@ -1,5 +1,5 @@
 ---
-name: Stacked Area Chart
+name: Stacked Area Chart with Cummulative Values & Hover
 plot_url: https://plot.ly/~PlotBot/862
 language: python
 suite: area
