change plot url

--- a/_posts/python/area/2015-10-20-stacked-area-hover.html
+++ b/_posts/python/area/2015-10-20-stacked-area-hover.html
@@ -1,6 +1,6 @@
 ---
 name: Stacked Area Chart with Actual Values & Hover
-plot_url: https://plot.ly/7781/~chelsea_lyn/
+plot_url: https://plot.ly/~chelsea_lyn/7781
 language: python
 suite: area
 order: 5
