--- a/_posts/python/area/2015-10-20-stacked-area-hover.html
+++ b/_posts/python/area/2015-10-20-stacked-area-hover.html
@@ -19,7 +19,7 @@ y0_org=[40, 80, 30, 10]
 y1_org=[20, 10, 10, 10]
 y2_org=[40, 10, 60, 80]
 
-# Add data to create cummulative stacked values
+# Add data to create cumulative stacked values
 y0_stck=y0_org
 y1_stck=[y0+y1 for y0, y1 in zip(y0_org, y1_org)]
 y2_stck=[y0+y1+y2 for y0, y1, y2 in zip(y0_org, y1_org, y2_org)]
