--- a/_posts/python/area/2015-10-20-stacked-area-hover.html
+++ b/_posts/python/area/2015-10-20-stacked-area-hover.html
@@ -1,5 +1,5 @@
 ---
-name: Stacked Area Chart with Actual Values & Hover
+name: Stacked Area Chart with Original Values
 plot_url: https://plot.ly/~chelsea_lyn/7781
 language: python
 suite: area
