fix txt font as array plot 404

--- a/_posts/python/annotations/2015-07-17-text-array.html
+++ b/_posts/python/annotations/2015-07-17-text-array.html
@@ -1,6 +1,6 @@
 ---
 name: Text Font as an Array - Styling Each Text Element
-plot_url: https://plot.ly/~chris/15801
+plot_url: https://plot.ly/~chelsea_lyn/6890/
 language: python
 suite: annotations
 order: 9999
