add bgcolor to code for python fileopts

--- a/_posts/python/fileopt/2015-04-09-fileopt_python_index.html
+++ b/_posts/python/fileopt/2015-04-09-fileopt_python_index.html
@@ -16,7 +16,7 @@ display_as: file_settings
 By default, Plotly will overwrite files made with the same filename:
 
 <div class="z-depth-1">
-<pre>import plotly.plotly as py
+<pre style="background: rgb(240, 240, 250);">import plotly.plotly as py
 from plotly.graph_objs import *
 
 data = Data([
@@ -40,7 +40,7 @@ your Plotly account in a folder tree.
 
 For example, to save your graphs to the folder <code>my-graphs</code>:
 
-<pre>py.plot(data, filename='my-graphs/my plot')</pre>
+<pre style="background: rgb(240, 240, 250);">py.plot(data, filename='my-graphs/my plot')</pre>
 
 If the folder doesn't exist, it will be created.
 
@@ -48,7 +48,7 @@ If the folder doesn't exist, it will be created.
 <h4>Creating new files</h4>
 
 <div class="z-depth-1">
-<pre>import plotly.plotly as py
+<pre style="background: rgb(240, 240, 250);">import plotly.plotly as py
 from plotly.graph_objs import *
 
 data = Data([
@@ -75,7 +75,7 @@ then <a href="https://plot.ly/python/streaming">use the streaming API</a>.
 <h6>Example</h6>
 
 <div class="z-depth-1">
-<pre>import plotly.plotly as py
+<pre style="background: rgb(240, 240, 250);">import plotly.plotly as py
 from plotly.graph_objs import *
 
 trace0 = Scatter(
@@ -102,7 +102,7 @@ plot_url = py.plot(data, filename='extend plot', fileopt='extend')</pre>
 Then, extend the traces with more data.
 
 <div class="z-depth-1">
-<pre>import plotly.plotly as py
+<pre style="background: rgb(240, 240, 250);">import plotly.plotly as py
 from plotly.graph_objs import *
 
 trace0 = Scatter(
