add bg color and spaces around code blocks to fileopts docs

--- a/_posts/pandas/fileopt/2015-04-09-fileopt_python_index.html
+++ b/_posts/pandas/fileopt/2015-04-09-fileopt_python_index.html
@@ -14,9 +14,9 @@ display_as: file_settings
 <h4>Overwriting existing graphs and updating a graph at its unique URL</h4>
 
 By default, Plotly will overwrite files made with the same filename:
-
+<br>
 <div class="z-depth-1">
-<pre>import plotly.plotly as py
+<pre style="background: rgb(240, 240, 250);">import plotly.plotly as py
 from plotly.graph_objs import *
 
 data = Data([
@@ -28,7 +28,7 @@ data = Data([
 
 plot_url = py.plot(data, filename='my plot')</pre>
 </div>
-
+<br>
 If a graph named 'my plot' already exists in your account, then it will be overwritten
 with this new version and the URL of the graph will persist.
 
@@ -39,16 +39,16 @@ Filenames that contain <code>"/"</code> be treated as a Plotly directory and wil
 your Plotly account in a folder tree.
 
 For example, to save your graphs to the folder <code>my-graphs</code>:
-
-<pre>py.plot(data, filename='my-graphs/my plot')</pre>
-
+<br>
+<pre style="background: rgb(240, 240, 250);">py.plot(data, filename='my-graphs/my plot')</pre>
+<br>
 If the folder doesn't exist, it will be created.
 
 
 <h4>Creating new files</h4>
 
 <div class="z-depth-1">
-<pre>import plotly.plotly as py
+<pre style="background: rgb(240, 240, 250);">import plotly.plotly as py
 from plotly.graph_objs import *
 
 data = Data([
@@ -60,7 +60,7 @@ data = Data([
 
 plot_url = py.plot(data, filename='new plot', fileopt='new')</pre>
 </div>
-
+<br>
 With <code>fileopt='new'</code>, Plotly will always create a new file. If a
 file with the same name already exists, then Plotly will append a '(1)' to the end
 of the filename, e.g. <code>new plot (1)</code> and create a unique URL.
@@ -75,7 +75,7 @@ then <a href="https://plot.ly/pandas/streaming">use the streaming API</a>.
 <h6>Example</h6>
 
 <div class="z-depth-1">
-<pre>import plotly.plotly as py
+<pre style="background: rgb(240, 240, 250);">import plotly.plotly as py
 from plotly.graph_objs import *
 
 trace0 = Scatter(
@@ -98,11 +98,11 @@ data = Data([trace0, trace1, trace2])
 # Take 1: if there is no data in the plot, 'extend' will create new traces.
 plot_url = py.plot(data, filename='extend plot', fileopt='extend')</pre>
 </div>
-
+<br>
 Then, extend the traces with more data.
-
+<br>
 <div class="z-depth-1">
-<pre>import plotly.plotly as py
+<pre style="background: rgb(240, 240, 250);">import plotly.plotly as py
 from plotly.graph_objs import *
 
 trace0 = Scatter(
