edit python network doc

--- a/_posts/python/network/2015-06-30-networkx.html
+++ b/_posts/python/network/2015-06-30-networkx.html
@@ -1,6 +1,6 @@
 ---
 permalink: python/network-graphs
-description: How to make interactive network graphs in Python with NetworkX and Plotly. 
+description: How to make Network Graphs in Python with Plotly. One examples of a network graph with NetworkX
 title: Network Graphs
 has_thumbnail: true
 thumbnail: /images/net.png
@@ -10,7 +10,7 @@ title: Python Network Graphs | plotly
 display_as: chart_type
 has_thumbnail: true
 page_type: example_index
-order: 28
+order: 32
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
@@ -18,7 +18,7 @@ order: 28
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Network-Graphs-with-Plotly-&amp;-NetworkX-in-Python">Network Graphs with Plotly &amp; NetworkX in Python<a class="anchor-link" href="#Network-Graphs-with-Plotly-&amp;-NetworkX-in-Python">&#182;</a></h1>
+<h1 id="Network-Graphs-with-Plotly">Network Graphs with Plotly<a class="anchor-link" href="#Network-Graphs-with-Plotly">&#182;</a></h1>
 </div>
 </div>
 </div>
@@ -43,7 +43,8 @@ order: 28
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h4 id="Store-position-as-node-attribute-data-for-random_geometric_graph">Store position as node attribute data for random_geometric_graph<a class="anchor-link" href="#Store-position-as-node-attribute-data-for-random_geometric_graph">&#182;</a></h4>
+<p>Store position as node attribute data for random_geometric_graph</p>
+
 </div>
 </div>
 </div>
@@ -66,7 +67,8 @@ order: 28
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h4 id="Find-node-near-center-(0.5,-0.5)">Find node near center (0.5, 0.5)<a class="anchor-link" href="#Find-node-near-center-(0.5,-0.5)">&#182;</a></h4>
+<p>Find node near center (0.5, 0.5)</p>
+
 </div>
 </div>
 </div>
@@ -95,7 +97,8 @@ order: 28
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h4 id="Color-by-path-length-from-node-near-center">Color by path length from node near center<a class="anchor-link" href="#Color-by-path-length-from-node-near-center">&#182;</a></h4>
+<p>Color by path length from node near center</p>
+
 </div>
 </div>
 </div>
@@ -117,7 +120,8 @@ order: 28
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h4 id="Add-edges-as-disconnected-lines-in-a-single-trace-and-nodes-as-a-scatter-trace">Add edges as disconnected lines in a single trace and nodes as a scatter trace<a class="anchor-link" href="#Add-edges-as-disconnected-lines-in-a-single-trace-and-nodes-as-a-scatter-trace">&#182;</a></h4>
+<p>Add edges as disconnected lines in a single trace and nodes as a scatter trace</p>
+
 </div>
 </div>
 </div>
@@ -178,7 +182,8 @@ order: 28
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h4 id="Color-node-points-by-the-number-of-connections.">Color node points by the number of connections.<a class="anchor-link" href="#Color-node-points-by-the-number-of-connections.">&#182;</a></h4><p>Another option would be to size points by the number of connections 
+<p>Color node points by the number of connections.</p>
+<p>Another option would be to size points by the number of connections 
 i.e. <code>node_trace['marker']['size'].append(len(adjacencies))</code></p>
 
 </div>
@@ -205,7 +210,53 @@ i.e. <code>node_trace['marker']['size'].append(len(adjacencies))</code></p>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h4 id="Create-figure-and-send-to-Plotly">Create figure and send to Plotly<a class="anchor-link" href="#Create-figure-and-send-to-Plotly">&#182;</a></h4>
+<p>Create figure and send to Plotly</p>
+
 </div>
 </div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[7]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre><span class="n">fig</span> <span class="o">=</span> <span class="n">Figure</span><span class="p">(</span><span class="n">data</span><span class="o">=</span><span class="n">Data</span><span class="p">([</span><span class="n">edge_trace</span><span class="p">,</span> <span class="n">node_trace</span><span class="p">]),</span>
+             <span class="n">layout</span><span class="o">=</span><span class="n">Layout</span><span class="p">(</span>
+                <span class="n">title</span><span class="o">=</span><span class="s">&#39;&lt;br&gt;Network graph made with Python&#39;</span><span class="p">,</span>
+                <span class="n">titlefont</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">size</span><span class="o">=</span><span class="mi">16</span><span class="p">),</span>
+                <span class="n">showlegend</span><span class="o">=</span><span class="bp">False</span><span class="p">,</span> 
+                <span class="n">width</span><span class="o">=</span><span class="mi">650</span><span class="p">,</span>
+                <span class="n">height</span><span class="o">=</span><span class="mi">650</span><span class="p">,</span>
+                <span class="n">hovermode</span><span class="o">=</span><span class="s">&#39;closest&#39;</span><span class="p">,</span>
+                <span class="n">margin</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">b</span><span class="o">=</span><span class="mi">20</span><span class="p">,</span><span class="n">l</span><span class="o">=</span><span class="mi">5</span><span class="p">,</span><span class="n">r</span><span class="o">=</span><span class="mi">5</span><span class="p">,</span><span class="n">t</span><span class="o">=</span><span class="mi">40</span><span class="p">),</span>
+                <span class="n">annotations</span><span class="o">=</span><span class="p">[</span> <span class="nb">dict</span><span class="p">(</span>
+                    <span class="n">text</span><span class="o">=</span><span class="s">&quot;Python code: &lt;a href=&#39;https://plot.ly/ipython-notebooks/network-graphs/&#39;&gt; https://plot.ly/ipython-notebooks/network-graphs/&lt;/a&gt;&quot;</span><span class="p">,</span>
+                    <span class="n">showarrow</span><span class="o">=</span><span class="bp">False</span><span class="p">,</span>
+                    <span class="n">xref</span><span class="o">=</span><span class="s">&quot;paper&quot;</span><span class="p">,</span> <span class="n">yref</span><span class="o">=</span><span class="s">&quot;paper&quot;</span><span class="p">,</span>
+                    <span class="n">x</span><span class="o">=</span><span class="mf">0.005</span><span class="p">,</span> <span class="n">y</span><span class="o">=-</span><span class="mf">0.002</span> <span class="p">)</span> <span class="p">],</span>
+                <span class="n">xaxis</span><span class="o">=</span><span class="n">XAxis</span><span class="p">(</span><span class="n">showgrid</span><span class="o">=</span><span class="bp">False</span><span class="p">,</span> <span class="n">zeroline</span><span class="o">=</span><span class="bp">False</span><span class="p">,</span> <span class="n">showticklabels</span><span class="o">=</span><span class="bp">False</span><span class="p">),</span>
+                <span class="n">yaxis</span><span class="o">=</span><span class="n">YAxis</span><span class="p">(</span><span class="n">showgrid</span><span class="o">=</span><span class="bp">False</span><span class="p">,</span> <span class="n">zeroline</span><span class="o">=</span><span class="bp">False</span><span class="p">,</span> <span class="n">showticklabels</span><span class="o">=</span><span class="bp">False</span><span class="p">)))</span>
+
+<span class="n">py</span><span class="o">.</span><span class="n">iplot</span><span class="p">(</span><span class="n">fig</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;networkx&#39;</span><span class="p">)</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area"><div class="prompt output_prompt">Out[7]:</div>
+
+<div class="output_html rendered_html output_subarea output_execute_result">
+<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/7803.embed" height="650px" width="650px"></iframe>
+</div>
+
+</div>
+
+</div>
+</div>
+
 </div>{% endraw %}
