add network nb png

--- a/_posts/user_guide_python/2015-06-30-Networks-plotly.html
+++ b/_posts/user_guide_python/2015-06-30-Networks-plotly.html
@@ -2,6 +2,7 @@
 permalink: /ipython-notebooks/networks
 description: How to make network graphs with Python and Plotly graphs.
 title: Network Graphs
+name: Network Graphs
 has_thumbnail: false
 thumbnail: /images/static-image
 layout: user-guide
