--- a/_posts/2015-05-25-ipython-notebooks_gallery.html
+++ b/_posts/2015-05-25-ipython-notebooks_gallery.html
@@ -234,6 +234,15 @@ has_thumbnail: false
           </div>
       </a>
 
+      <a href="/ipython-notebooks/networks/">
+          <div class="alltutcol">
+            <img class="thumbnail" alt="Plotting Networks with Plotly and NetworkX" src="{{site.staticurl}}/images/ipython-img/Networks-plotly.png" >
+            <div class="titlecenter">
+                  <h5 class="centered">Plotting Networks with Plotly & NetworkX</h5>
+            </div>
+          </div>
+      </a>
+
       <div class="three-column-clear"></div>
     </div>
     <h3 id="civic-data" class="even_margin"><a class="no_underline plot-blue" href="#civic-data">Civic Data</a></h3>
