--- a/_posts/python/network/2015-06-30-networkx.html
+++ b/_posts/python/network/2015-06-30-networkx.html
@@ -1,7 +1,7 @@
 ---
 permalink: python/network-graphs
 description: How to make Network Graphs in Python with Plotly. One examples of a network graph with NetworkX
-title: Network Graphs
+name: Network Graphs
 has_thumbnail: true
 thumbnail: /images/net.png
 layout: user-guide
@@ -43,7 +43,7 @@ order: 32
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Store position as node attribute data for random_geometric_graph</p>
+<p>Store position as node attribute data for random_geometric_graph and find node near center (0.5, 0.5)</p>
 
 </div>
 </div>
@@ -55,29 +55,8 @@ order: 32
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">G</span><span class="o">=</span><span class="n">nx</span><span class="o">.</span><span class="n">random_geometric_graph</span><span class="p">(</span><span class="mi">200</span><span class="p">,</span><span class="mf">0.125</span><span class="p">)</span>
 <span class="n">pos</span><span class="o">=</span><span class="n">nx</span><span class="o">.</span><span class="n">get_node_attributes</span><span class="p">(</span><span class="n">G</span><span class="p">,</span><span class="s">&#39;pos&#39;</span><span class="p">)</span>
-</pre></div>
 
-</div>
-</div>
-</div>
-
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>Find node near center (0.5, 0.5)</p>
-
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[3]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="n">dmin</span><span class="o">=</span><span class="mi">1</span>
+<span class="n">dmin</span><span class="o">=</span><span class="mi">1</span>
 <span class="n">ncenter</span><span class="o">=</span><span class="mi">0</span>
 <span class="k">for</span> <span class="n">n</span> <span class="ow">in</span> <span class="n">pos</span><span class="p">:</span>
     <span class="n">x</span><span class="p">,</span><span class="n">y</span><span class="o">=</span><span class="n">pos</span><span class="p">[</span><span class="n">n</span><span class="p">]</span>
@@ -85,29 +64,8 @@ order: 32
     <span class="k">if</span> <span class="n">d</span><span class="o">&lt;</span><span class="n">dmin</span><span class="p">:</span>
         <span class="n">ncenter</span><span class="o">=</span><span class="n">n</span>
         <span class="n">dmin</span><span class="o">=</span><span class="n">d</span>
-</pre></div>
-
-</div>
-</div>
-</div>
-
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>Color by path length from node near center</p>
-
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[4]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="n">p</span><span class="o">=</span><span class="n">nx</span><span class="o">.</span><span class="n">single_source_shortest_path_length</span><span class="p">(</span><span class="n">G</span><span class="p">,</span><span class="n">ncenter</span><span class="p">)</span>
+        
+<span class="n">p</span><span class="o">=</span><span class="n">nx</span><span class="o">.</span><span class="n">single_source_shortest_path_length</span><span class="p">(</span><span class="n">G</span><span class="p">,</span><span class="n">ncenter</span><span class="p">)</span>
 </pre></div>
 
 </div>
@@ -127,7 +85,7 @@ order: 32
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[5]:</div>
+<div class="prompt input_prompt">In&nbsp;[3]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">edge_trace</span> <span class="o">=</span> <span class="n">Scatter</span><span class="p">(</span>
@@ -191,7 +149,7 @@ i.e. <code>node_trace['marker']['size'].append(len(adjacencies))</code></p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[6]:</div>
+<div class="prompt input_prompt">In&nbsp;[4]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="k">for</span> <span class="n">node</span><span class="p">,</span> <span class="n">adjacencies</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="n">G</span><span class="o">.</span><span class="n">adjacency_list</span><span class="p">()):</span>
@@ -217,7 +175,7 @@ i.e. <code>node_trace['marker']['size'].append(len(adjacencies))</code></p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[7]:</div>
+<div class="prompt input_prompt">In&nbsp;[5]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">fig</span> <span class="o">=</span> <span class="n">Figure</span><span class="p">(</span><span class="n">data</span><span class="o">=</span><span class="n">Data</span><span class="p">([</span><span class="n">edge_trace</span><span class="p">,</span> <span class="n">node_trace</span><span class="p">]),</span>
@@ -248,7 +206,7 @@ i.e. <code>node_trace['marker']['size'].append(len(adjacencies))</code></p>
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[7]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[5]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/7803.embed" height="650px" width="650px"></iframe>
