edit network nb title

--- a/_posts/tutorials/2015-06-30-networkx.html
+++ b/_posts/tutorials/2015-06-30-networkx.html
@@ -1,7 +1,8 @@
 ---
 permalink: /ipython-notebooks/network-graphs
 description: An IPython notebook showing how to use networkx to generate network graphs with Plotly's Python library.
-title: Network Graphs with the networkx and plotly Python Modules
+title: Network Graphs with NetworkX and Plotly Python Modules
+name: Network Graphs with NetworkX and Plotly Python Modules
 has_thumbnail: false
 thumbnail: /images/static-image
 layout: user-guide
