--- a/_posts/user_guide_python/2015-06-30-Networks-plotly.html
+++ b/_posts/user_guide_python/2015-06-30-Networks-plotly.html
@@ -1,7 +1,8 @@
 ---
 permalink: /ipython-notebooks/networks
 description: How to make network graphs with Python and Plotly graphs.
-title: Network Graphs
+title: Networks with Plotly
+name: Networks with Plotly
 has_thumbnail: false
 thumbnail: /images/static-image
 layout: user-guide
