edits to python bubble and 3dbubble

--- a/_posts/python/bubble/2015-08-14-bubble-gallery-life-expectancy.html
+++ b/_posts/python/bubble/2015-08-14-bubble-gallery-life-expectancy.html
@@ -1,6 +1,6 @@
 ---
 name: Categorical Bubble Charts
-plot_url: https://plot.ly/~PlotBot/878
+plot_url: https://plot.ly/~chelsea_lyn/8648
 language: python
 suite: bubble
 order: 6
