--- a/_posts/python/3d-bubble/2015-06-30-3dbubble.html
+++ b/_posts/python/3d-bubble/2015-06-30-3dbubble.html
@@ -27,13 +27,13 @@ order: 10
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Example-with-Sizing-and-Color-by-Variables-from-a-dataset">Example with Sizing and Color by Variables from a dataset<a class="anchor-link" href="#Example-with-Sizing-and-Color-by-Variables-from-a-dataset">&#182;</a></h3>
+<h4 id="Example-with-Sizing-and-Color-by-Variables-from-a-dataset">Example with Sizing and Color by Variables from a dataset<a class="anchor-link" href="#Example-with-Sizing-and-Color-by-Variables-from-a-dataset">&#182;</a></h4>
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[5]:</div>
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -75,7 +75,7 @@ order: 10
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[5]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[1]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/8709.embed" height="800px" width="800px"></iframe>
@@ -92,7 +92,7 @@ order: 10
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Example-with-Sizing-by-a-Variable">Example with Sizing by a Variable<a class="anchor-link" href="#Example-with-Sizing-by-a-Variable">&#182;</a></h3>
+<h4 id="Example-with-Sizing-by-a-Variable">Example with Sizing by a Variable<a class="anchor-link" href="#Example-with-Sizing-by-a-Variable">&#182;</a></h4>
 </div>
 </div>
 </div>
@@ -101,7 +101,8 @@ order: 10
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h6 id="Plot-planets'-distance-from-sun,-density,-and-gravity-with-bubble-size-based-on-planet-size">Plot planets' distance from sun, density, and gravity with bubble size based on planet size<a class="anchor-link" href="#Plot-planets'-distance-from-sun,-density,-and-gravity-with-bubble-size-based-on-planet-size">&#182;</a></h6>
+<p>Plot planets' distance from sun, density, and gravity with bubble size based on planet size</p>
+
 </div>
 </div>
 </div>
@@ -140,7 +141,7 @@ order: 10
 <span class="n">data</span><span class="o">=</span><span class="p">[</span><span class="n">trace1</span><span class="p">]</span>
 
 <span class="c"># Style Layout</span>
-<span class="n">layout</span><span class="o">=</span><span class="n">Layout</span><span class="p">(</span><span class="n">width</span><span class="o">=</span><span class="mi">800</span><span class="p">,</span> <span class="n">height</span><span class="o">=</span><span class="mi">900</span><span class="p">,</span> <span class="n">title</span> <span class="o">=</span> <span class="s">&#39;Planets!&#39;</span><span class="p">,</span>
+<span class="n">layout</span><span class="o">=</span><span class="n">Layout</span><span class="p">(</span><span class="n">width</span><span class="o">=</span><span class="mi">800</span><span class="p">,</span> <span class="n">height</span><span class="o">=</span><span class="mi">800</span><span class="p">,</span> <span class="n">title</span> <span class="o">=</span> <span class="s">&#39;Planets!&#39;</span><span class="p">,</span>
               <span class="n">scene</span> <span class="o">=</span> <span class="n">Scene</span><span class="p">(</span><span class="n">xaxis</span><span class="o">=</span><span class="n">XAxis</span><span class="p">(</span><span class="n">title</span><span class="o">=</span><span class="s">&#39;Distance from Sun&#39;</span><span class="p">,</span>
                                         <span class="n">titlefont</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">color</span><span class="o">=</span><span class="s">&#39;Orange&#39;</span><span class="p">)),</span>
                             <span class="n">yaxis</span><span class="o">=</span><span class="n">YAxis</span><span class="p">(</span><span class="n">title</span><span class="o">=</span><span class="s">&#39;Density&#39;</span><span class="p">,</span>
@@ -182,7 +183,7 @@ order: 10
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Example-with-Sizing-and-Color-by-Variables">Example with Sizing and Color by Variables<a class="anchor-link" href="#Example-with-Sizing-and-Color-by-Variables">&#182;</a></h3>
+<h4 id="Example-with-Sizing-and-Color-by-Variables">Example with Sizing and Color by Variables<a class="anchor-link" href="#Example-with-Sizing-and-Color-by-Variables">&#182;</a></h4>
 </div>
 </div>
 </div>
@@ -191,13 +192,14 @@ order: 10
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h6 id="Plot-planets'-distance-from-sun,-density,-and-gravity-with-bubble-size-based-on-planet-size">Plot planets' distance from sun, density, and gravity with bubble size based on planet size<a class="anchor-link" href="#Plot-planets'-distance-from-sun,-density,-and-gravity-with-bubble-size-based-on-planet-size">&#182;</a></h6>
+<p>Plot planets' distance from sun, density, and gravity with bubble size based on planet size</p>
+
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[3]:</div>
+<div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -230,7 +232,7 @@ order: 10
 <span class="n">data</span><span class="o">=</span><span class="p">[</span><span class="n">trace1</span><span class="p">]</span>
 
 <span class="c"># Style Layout</span>
-<span class="n">layout</span><span class="o">=</span><span class="n">Layout</span><span class="p">(</span><span class="n">width</span><span class="o">=</span><span class="mi">800</span><span class="p">,</span> <span class="n">height</span><span class="o">=</span><span class="mi">900</span><span class="p">,</span> <span class="n">title</span> <span class="o">=</span> <span class="s">&#39;Planets!!&#39;</span><span class="p">,</span>
+<span class="n">layout</span><span class="o">=</span><span class="n">Layout</span><span class="p">(</span><span class="n">width</span><span class="o">=</span><span class="mi">800</span><span class="p">,</span> <span class="n">height</span><span class="o">=</span><span class="mi">800</span><span class="p">,</span> <span class="n">title</span> <span class="o">=</span> <span class="s">&#39;Planets!!&#39;</span><span class="p">,</span>
               <span class="n">scene</span> <span class="o">=</span> <span class="n">Scene</span><span class="p">(</span><span class="n">xaxis</span><span class="o">=</span><span class="n">XAxis</span><span class="p">(</span><span class="n">title</span><span class="o">=</span><span class="s">&#39;Distance from Sun&#39;</span><span class="p">,</span>
                                         <span class="n">titlefont</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">color</span><span class="o">=</span><span class="s">&#39;Orange&#39;</span><span class="p">)),</span>
                             <span class="n">yaxis</span><span class="o">=</span><span class="n">YAxis</span><span class="p">(</span><span class="n">title</span><span class="o">=</span><span class="s">&#39;Density&#39;</span><span class="p">,</span>
@@ -255,10 +257,10 @@ order: 10
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[3]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[2]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/8705.embed" height="900px" width="800px"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/8705.embed" height="800px" width="800px"></iframe>
 </div>
 
 </div>
