--- a/_posts/python/line-plots/2015-06-30-lines.html
+++ b/_posts/python/line-plots/2015-06-30-lines.html
@@ -633,4 +633,14 @@ modifiys line width, and adds plot and axes titles.</p>
 <h3 id="References">References<a class="anchor-link" href="#References">&#182;</a></h3>
 </div>
 </div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>See <a href="https://plot.ly/python/reference/#scatter">https://plot.ly/python/reference/#scatter</a> for more information</p>
+
+</div>
+</div>
 </div>{% endraw %}
