replace gos with dicts

--- a/_posts/pandas/3d-bubble/2015-06-30-3dbubble.html
+++ b/_posts/pandas/3d-bubble/2015-06-30-3dbubble.html
@@ -33,7 +33,7 @@ order: 6
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[4]:</div>
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -50,20 +50,20 @@ order: 6
     <span class="n">z</span><span class="o">=</span><span class="n">df</span><span class="p">[</span><span class="s">&#39;pop&#39;</span><span class="p">][</span><span class="mi">750</span><span class="p">:</span><span class="mi">1500</span><span class="p">],</span>
     <span class="n">text</span><span class="o">=</span><span class="n">df</span><span class="p">[</span><span class="s">&#39;country&#39;</span><span class="p">][</span><span class="mi">750</span><span class="p">:</span><span class="mi">1500</span><span class="p">],</span>
     <span class="n">mode</span><span class="o">=</span><span class="s">&#39;markers&#39;</span><span class="p">,</span>
-    <span class="n">marker</span><span class="o">=</span><span class="n">Marker</span><span class="p">(</span>
+    <span class="n">marker</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span>
         <span class="n">sizemode</span><span class="o">=</span><span class="s">&#39;diameter&#39;</span><span class="p">,</span>
         <span class="n">sizeref</span><span class="o">=</span><span class="mi">750</span><span class="p">,</span>
         <span class="n">size</span><span class="o">=</span><span class="n">df</span><span class="p">[</span><span class="s">&#39;gdpPercap&#39;</span><span class="p">][</span><span class="mi">750</span><span class="p">:</span><span class="mi">1500</span><span class="p">],</span>
         <span class="n">color</span> <span class="o">=</span> <span class="n">df</span><span class="p">[</span><span class="s">&#39;lifeExp&#39;</span><span class="p">][</span><span class="mi">750</span><span class="p">:</span><span class="mi">1500</span><span class="p">],</span>
         <span class="n">colorscale</span> <span class="o">=</span> <span class="s">&#39;Viridis&#39;</span><span class="p">,</span>
         <span class="n">colorbar</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span><span class="n">title</span> <span class="o">=</span> <span class="s">&#39;Life&lt;br&gt;Expectancy&#39;</span><span class="p">),</span>
-        <span class="n">line</span><span class="o">=</span><span class="n">Line</span><span class="p">(</span><span class="n">color</span><span class="o">=</span><span class="s">&#39;rgb(140, 140, 170)&#39;</span><span class="p">)</span>
+        <span class="n">line</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">color</span><span class="o">=</span><span class="s">&#39;rgb(140, 140, 170)&#39;</span><span class="p">)</span>
     <span class="p">)</span>
 <span class="p">)</span>
 
 <span class="n">data</span><span class="o">=</span><span class="p">[</span><span class="n">trace1</span><span class="p">]</span>
-<span class="n">layout</span><span class="o">=</span><span class="n">Layout</span><span class="p">(</span><span class="n">height</span><span class="o">=</span><span class="mi">800</span><span class="p">,</span> <span class="n">width</span><span class="o">=</span><span class="mi">800</span><span class="p">,</span> <span class="n">title</span><span class="o">=</span><span class="s">&#39;Examining Population and Life Expectancy Over Time&#39;</span><span class="p">)</span>
-<span class="n">fig</span><span class="o">=</span><span class="n">Figure</span><span class="p">(</span><span class="n">data</span><span class="o">=</span><span class="n">data</span><span class="p">,</span> <span class="n">layout</span><span class="o">=</span><span class="n">layout</span><span class="p">)</span>
+<span class="n">layout</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">height</span><span class="o">=</span><span class="mi">800</span><span class="p">,</span> <span class="n">width</span><span class="o">=</span><span class="mi">800</span><span class="p">,</span> <span class="n">title</span><span class="o">=</span><span class="s">&#39;Examining Population and Life Expectancy Over Time&#39;</span><span class="p">)</span>
+<span class="n">fig</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">data</span><span class="o">=</span><span class="n">data</span><span class="p">,</span> <span class="n">layout</span><span class="o">=</span><span class="n">layout</span><span class="p">)</span>
 <span class="n">py</span><span class="o">.</span><span class="n">iplot</span><span class="p">(</span><span class="n">fig</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;3DBubble&#39;</span><span class="p">)</span>
 </pre></div>
 
@@ -75,7 +75,7 @@ order: 6
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[4]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[1]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/8792.embed" height="800px" width="800px"></iframe>
