edit webgl examples

--- a/_posts/python/WebGL/2015-06-30-webgl.html
+++ b/_posts/python/WebGL/2015-06-30-webgl.html
@@ -64,7 +64,7 @@ for increased speed, improved interactivity, and the ability to plot even more d
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[32]:</div>
+<div class="prompt input_prompt">In&nbsp;[5]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -74,13 +74,13 @@ for increased speed, improved interactivity, and the ability to plot even more d
 
 <span class="n">N</span> <span class="o">=</span> <span class="mi">100000</span>
 <span class="n">trace</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Scattergl</span><span class="p">(</span>
-    <span class="n">x</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">linspace</span><span class="p">(</span><span class="o">-</span><span class="mi">1</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="n">N</span><span class="p">),</span>
+    <span class="n">x</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">randn</span><span class="p">(</span><span class="n">N</span><span class="p">),</span>
     <span class="n">y</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">randn</span><span class="p">(</span><span class="n">N</span><span class="p">),</span>
     <span class="n">mode</span> <span class="o">=</span> <span class="s">&#39;markers&#39;</span><span class="p">,</span>
     <span class="n">marker</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span>
-        <span class="n">line</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span>
-            <span class="n">width</span><span class="o">=</span><span class="mi">1</span><span class="p">,</span> 
-            <span class="n">color</span><span class="o">=</span><span class="s">&#39;#2F4F4F&#39;</span><span class="p">)</span>
+        <span class="n">line</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span>
+            <span class="n">width</span> <span class="o">=</span> <span class="mi">1</span><span class="p">,</span> 
+            <span class="n">color</span> <span class="o">=</span> <span class="s">&#39;#404040&#39;</span><span class="p">)</span>
     <span class="p">)</span>
 <span class="p">)</span>
 <span class="n">data</span> <span class="o">=</span> <span class="p">[</span><span class="n">trace</span><span class="p">]</span>
@@ -95,22 +95,7 @@ for increased speed, improved interactivity, and the ability to plot even more d
 <div class="output">
 
 
-<div class="output_area"><div class="prompt"></div>
-<div class="output_subarea output_stream output_stderr output_text">
-<pre>/Users/Chelsea/venv2.7/lib/python2.7/site-packages/plotly/plotly/plotly.py:231: UserWarning:
-
-Woah there! Look at all those points! Due to browser limitations, Plotly has a hard time graphing more than 500k data points for line charts, or 40k points for other types of charts. Here are some suggestions:
-(1) Trying using the image API to return an image instead of a graph URL
-(2) Use matplotlib
-(3) See if you can create your visualization with fewer data points
-
-If the visualization you&apos;re using aggregates points (e.g., box plot, histogram, etc.) you can disregard this warning.
-
-</pre>
-</div>
-</div>
-
-<div class="output_area"><div class="prompt output_prompt">Out[32]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[5]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/8823.embed" height="525px" width="100%"></iframe>
@@ -133,7 +118,7 @@ If the visualization you&apos;re using aggregates points (e.g., box plot, histog
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[1]:</div>
+<div class="prompt input_prompt">In&nbsp;[4]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -143,13 +128,13 @@ If the visualization you&apos;re using aggregates points (e.g., box plot, histog
 
 <span class="n">N</span> <span class="o">=</span> <span class="mi">100000</span>
 <span class="n">trace</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Scatter</span><span class="p">(</span>
-    <span class="n">x</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">linspace</span><span class="p">(</span><span class="o">-</span><span class="mi">1</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="n">N</span><span class="p">),</span>
+    <span class="n">x</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">randn</span><span class="p">(</span><span class="n">N</span><span class="p">),</span>
     <span class="n">y</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">randn</span><span class="p">(</span><span class="n">N</span><span class="p">),</span>
     <span class="n">mode</span> <span class="o">=</span> <span class="s">&#39;markers&#39;</span><span class="p">,</span>
     <span class="n">marker</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span>
-        <span class="n">line</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span>
-            <span class="n">width</span><span class="o">=</span><span class="mi">1</span><span class="p">,</span> 
-            <span class="n">color</span><span class="o">=</span><span class="s">&#39;#2F4F4F&#39;</span><span class="p">)</span>
+        <span class="n">line</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span>
+            <span class="n">width</span> <span class="o">=</span> <span class="mi">1</span><span class="p">,</span>
+            <span class="n">color</span> <span class="o">=</span> <span class="s">&#39;#404040&#39;</span><span class="p">)</span>
     <span class="p">)</span>
 <span class="p">)</span>
 <span class="n">data</span> <span class="o">=</span> <span class="p">[</span><span class="n">trace</span><span class="p">]</span>
@@ -165,32 +150,13 @@ If the visualization you&apos;re using aggregates points (e.g., box plot, histog
 
 
 <div class="output_area"><div class="prompt"></div>
-<div class="output_subarea output_stream output_stderr output_text">
-<pre>/Users/Chelsea/venv2.7/lib/python2.7/site-packages/plotly/plotly/plotly.py:231: UserWarning:
-
-Woah there! Look at all those points! Due to browser limitations, Plotly has a hard time graphing more than 500k data points for line charts, or 40k points for other types of charts. Here are some suggestions:
-(1) Trying using the image API to return an image instead of a graph URL
-(2) Use matplotlib
-(3) See if you can create your visualization with fewer data points
-
-If the visualization you&apos;re using aggregates points (e.g., box plot, histogram, etc.) you can disregard this warning.
-
-/Users/Chelsea/venv2.7/lib/python2.7/site-packages/plotly/plotly/plotly.py:1411: UserWarning:
-
-Estimated Draw Time Too Long
-
-</pre>
-</div>
-</div>
-
-<div class="output_area"><div class="prompt"></div>
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>The draw time for this plot will be slow for all clients.
 </pre>
 </div>
 </div>
 
-<div class="output_area"><div class="prompt output_prompt">Out[1]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[4]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/8827.embed" height="525px" width="100%"></iframe>
@@ -213,7 +179,7 @@ Estimated Draw Time Too Long
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[37]:</div>
+<div class="prompt input_prompt">In&nbsp;[7]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -223,16 +189,16 @@ Estimated Draw Time Too Long
 
 <span class="n">N</span> <span class="o">=</span> <span class="mi">1000000</span>
 <span class="n">trace</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Scattergl</span><span class="p">(</span>
-    <span class="n">x</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">linspace</span><span class="p">(</span><span class="o">-</span><span class="mi">1</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="n">N</span><span class="p">),</span>
+    <span class="n">x</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">randn</span><span class="p">(</span><span class="n">N</span><span class="p">),</span>
     <span class="n">y</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">randn</span><span class="p">(</span><span class="n">N</span><span class="p">),</span>
     <span class="n">mode</span> <span class="o">=</span> <span class="s">&#39;markers&#39;</span><span class="p">,</span>
     <span class="n">marker</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span>
-        <span class="n">line</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span>
-            <span class="n">width</span><span class="o">=</span><span class="mi">1</span><span class="p">,</span> 
-            <span class="n">color</span><span class="o">=</span><span class="s">&#39;#2F4F4F&#39;</span><span class="p">)</span>
+        <span class="n">color</span> <span class="o">=</span> <span class="s">&#39;rgb(152, 0, 0)&#39;</span><span class="p">,</span>
+        <span class="n">line</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span>
+            <span class="n">width</span> <span class="o">=</span> <span class="mi">1</span><span class="p">,</span>
+            <span class="n">color</span> <span class="o">=</span> <span class="s">&#39;rgb(0,0,0)&#39;</span><span class="p">)</span>
     <span class="p">)</span>
 <span class="p">)</span>
-
 <span class="n">data</span> <span class="o">=</span> <span class="p">[</span><span class="n">trace</span><span class="p">]</span>
 <span class="n">py</span><span class="o">.</span><span class="n">iplot</span><span class="p">(</span><span class="n">data</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;WebGLmillion&#39;</span><span class="p">)</span>
 </pre></div>
@@ -245,7 +211,7 @@ Estimated Draw Time Too Long
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[37]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[7]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/8817.embed" height="525px" width="100%"></iframe>
